feat(api): add project and album management endpoints
- Implemented `getProjectDetails`, `getAlbumTemplates`, and `getProjectAlbums` methods in `companyApi.ts` for fetching project and album data.
- Added participant management functions: `addParticipant`, `deleteParticipant`, `updateParticipant`, and `createParticipant`.
- Introduced user profile management functions: `getUserProfile` and `updateUserProfile`.
- Created company settings management functions: `getCompanySettings` and `updateCompanySettings`.
- Added project management functions: `getCompanyProjects` and `createProject`.
- Implemented Telegram channel verification in `telegramController.ts` with error handling for bot permissions.
- Created migration and schema check scripts for database management.
- Added Telegram bot initialization and command handling in `index.ts`.

feat(telegram): add channel verification endpoint

- Created `/api/telegram/check-channel` endpoint to verify if the bot is added to a Telegram channel and has admin rights.
- Enhanced error handling for various Telegram API responses.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      
+      <!-- Отключаем доступ к Bluetooth и другим устройствам -->
+      <meta http-equiv="Permissions-Policy" content="bluetooth=(), geolocation=(), microphone=(), camera=()" />
+      
       <title>klamonline (Community)</title>
     </head>
 
