Add SSL certificate and private key for klambot_ru
- Added __klambot_ru.full.crt containing the full certificate chain.
- Added __klambot_ru.crt for the primary certificate.
- Added __klambot_ru.key for the corresponding private key.
- Created __klambot_ru.zip to package the certificate and key files.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <!-- Отключаем доступ к Bluetooth и другим устройствам -->
       <meta http-equiv="Permissions-Policy" content="bluetooth=(), geolocation=(), microphone=(), camera=()" />
       
-      <title>klamonline (Community)</title>
+      <title>Платформа для мониторинга проектной и рабочей документации</title>
     </head>
 
     <body>
